# algue

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md  format_all.py
.github/workflows/: main.yml
algued/: CMakeLists.txt
algued/include/algued/: dispatcher.h  riot_api_client.h  riot_client.h  riot_client_fake.h
algued/src/: dispatcher.cpp  main.cpp  riot_api_client.cpp  riot_client.cpp  riot_client_fake.cpp
cmake/: kae.cmake
cmake/algue/: check_clang_format.py  check_clang_tidy.py  cpp_test.cmake
http/: CMakeLists.txt
http/include/http/: client.h  connection.h  fmt_endpoint.h  frame.h  frame_type.h  header.h  header_fields.h  huffman.h  method.h  methods.h  parser.h  request.h  response.h  server.h  status.h
http/src/: client.cpp  connection.cpp  frame.cpp  header.cpp  huffman.cpp  parser.cpp  request.cpp  response.cpp  server.cpp
http/test/: parser.cpp  request.cpp  response.cpp
json/: CMakeLists.txt
json/include/json/: dump.h  parse.h  types.h  value.h
json/src/: dump.cpp  parse.cpp  value.cpp
json/test/: dump.cpp  parse.cpp
lcu_api/: CMakeLists.txt
lcu_api/src/: main.cpp
lcu_api_explorer/: CMakeLists.txt
lcu_api_explorer/include/lcu_api_explorer/: lockfile.h
lcu_api_explorer/src/: lockfile.cpp  main.cpp
utils/: CMakeLists.txt
utils/include/utils/: always_false.h  base64.h  bytes.h  endian.h  iequal.h  index_span.h  lockfile.h  lower_bound.h  overloaded.h  parsing_context.h  ptr.h  self_path.h  value_ptr.h
utils/src/: base64.cpp  bytes.cpp  lockfile.cpp  parsing_context.cpp  self_path.cpp
web/: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  build.js  package.json  tsconfig.json  typings.d.ts  webpack.config.js
web/common/: api.ts  error_toasts.ts  footer.vue  global.scss  index.html
web/home/: app.vue  index.ts
web/live/: app.vue  game_info.vue  header.vue  index.ts  player.vue  team.vue
web/riot/: fetch.py  make.py  teams.ts
web/src/: index.html  index.js
web/src/components/: example.vue
